--- a/configure.ac
+++ b/configure.ac
@@ -31,15 +31,12 @@ AM_MAINTAINER_MODE([enable])
 AC_CONFIG_HEADER(src/config.h)
 
 dnl by default turn off debugging
-AC_MSG_CHECKING(whether to enable debugging)
-AC_ARG_ENABLE(debug,AS_HELP_STRING([--enable-debug],[build with extra debugging messages]),
-	[if test "x$enableval" != "xno"; then
-		AC_DEFINE_UNQUOTED(DEBUG, 1, Define this to enable debugging messages)
-		AC_MSG_RESULT(yes)
-		CFLAGS="$CFLAGS -g"
-	else
-		AC_MSG_RESULT(no)
-	fi],[AC_MSG_RESULT(no)])
+AC_MSG_CHECKING([whether to enable debugging])
+AC_ARG_ENABLE([debug],
+  [AS_HELP_STRING([--enable-debug],[build with extra debugging messages])],
+  [AC_MSG_RESULT([yes])
+   AC_DEFINE([DEBUG], 1, [Define this to enable debugging messages])],
+  [AC_MSG_RESULT([no])])
 
 AC_ARG_WITH([electric-fence],
   [AS_HELP_STRING([--with-electric-fence],
