Added contrib/ratdate.sh and updated Makefile.am

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -19,6 +19,6 @@
 
 bin_SCRIPTS = rpws
 
-pkgdata_DATA = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl rpshowall.sh unrat.c sloppy.c
-EXTRA_DIST    = ratpoison.el split.sh genrpbindings rpws allwindows.sh clickframe.pl rpshowall.sh unrat.c sloppy.c
+pkgdata_DATA = allwindows.sh clickframe.pl genrpbindings ratdate.sh ratpoison.el rpshowall.sh rpws sloppy.c split.sh unrat.c
+EXTRA_DIST   = allwindows.sh clickframe.pl genrpbindings ratdate.sh ratpoison.el rpshowall.sh rpws sloppy.c split.sh unrat.c
 MAINTAINERCLEANFILES = Makefile.in
