--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,7 @@ MAINTAINERCLEANFILES = Makefile.in config.h.in
 
 AM_LDFLAGS=${X_LDFLAGS}
 ratpoison_LDADD=${XFT_LIBS} ${X_LIBS} ${X_EXTRA_LIBS} ${HISTORY_LIBS}
-AM_CPPFLAGS=${X_CFLAGS} ${XFT_CFLAGS}
+AM_CPPFLAGS=-DSYSCONFDIR='"$(sysconfdir)"' ${X_CFLAGS} ${XFT_CFLAGS}
 
 ratpoison_SOURCES	= actions.c		\
 			actions.h		\
