Replace man(7) manpage with a mdoc(7)-formatted one.
* The former manpage needed Groff to be properly formatted, this is a
  dependancy I want to remove.  Support for systems where neither groff
  nor mandoc are available is achieved by generating a man(7) manpage,
  which will be shipped in the tarballs.
* The mdoc(7) language provides semantic annotations for better
  documentation of Unix utilities, contrary to man(7) which provides
  mere presentation markup.
* The build system now encodes paths in the manpage according to the
  settings passed to ./configure.

Note that some markup used may not be perfectly appropriate.  Comments
about this matter, and questions from distro maintainers using manpage
patches are welcome.

Selected reading:
- http://mdocml.bsd.lv                general information about mdoc(7)
- http://mdocml.bsd.lv/mdoc.7.html    mdoc(7) macros reference
- http://manpages.bsd.lv/             mdoc(7) tutorial

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -19,5 +19,20 @@
 
 info_TEXINFOS = ratpoison.texi
 man_MANS      = ratpoison.1
-EXTRA_DIST    = $(man_MANS) sample.ratpoisonrc ipaq.ratpoisonrc fdl.texi
-MAINTAINERCLEANFILES = Makefile.in texinfo.tex
+CLEANFILES    = ratpoison.1
+EXTRA_DIST    = $(srcdir)/ratpoison.mdoc.1 $(srcdir)/ratpoison.man.1 sample.ratpoisonrc ipaq.ratpoisonrc fdl.texi
+MAINTAINERCLEANFILES = $(srcdir)/ratpoison.man.1 Makefile.in texinfo.tex
+
+ratpoison.1: $(srcdir)/ratpoison.$(manpage_format).1 Makefile
+	tmp=`mktemp` && \
+	sed -e 's|%%sysconfdir%%|$(sysconfdir)|g' \
+	    -e 's|%%docdir%%|$(docdir)|g' \
+	    < $(srcdir)/ratpoison.$(manpage_format).1 > "$$tmp" && \
+	chmod 0644 "$$tmp" && \
+	mv "$$tmp" ratpoison.1
+
+$(srcdir)/ratpoison.man.1: $(srcdir)/ratpoison.mdoc.1
+	tmp=`mktemp` && \
+	$(MANDOC) -Tman < $(srcdir)/ratpoison.mdoc.1 > "$$tmp" && \
+	chmod 0644 "$$tmp" && \
+	mv "$$tmp" $(srcdir)/ratpoison.man.1
