--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ MAINTAINERCLEANFILES	= Makefile.in aclocal.m4 configure src/config.h.in \
 
 SUBDIRS			= src doc contrib
 
-doc_DATA		= AUTHORS COPYING ChangeLog NEWS README
+doc_DATA		= AUTHORS COPYING NEWS README
 
 EXTRA_DIST		= $(doc_DATA)
 
