Add a test program to exercise concat_width()
This program can be run using `make check`. In order to do this, you
will need to run `autogen.sh` again.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ ratpoison-*.tar.gz
 ratpoison-*.tar.gz.sig
 ratpoison-*.tar.xz
 ratpoison-*.tar.xz.sig
+src/format_test
+src/format_test.trs
 TAGS
 /doc/version.texi
 /doc/stamp-vti
