Move utf8_locale to its own file
So that we can easily use it from tests.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -69,6 +69,8 @@ ratpoison_SOURCES	= actions.c		\
 			screen.c		\
 			split.c			\
 			split.h			\
+			utf8.c			\
+			utf8.h			\
 			window.c		\
 			window.h
 
@@ -83,6 +85,6 @@ check_PROGRAMS = format_test
 format_test_SOURCES = actions.c bar.c completions.c editor.c events.c format.c \
 											frame.c globals.c group.c history.c hook.c input.c \
 											linkedlist.c manage.c number.c sbuf.c screen.c split.c \
-											window.c xrandr.c
+											window.c xrandr.c utf8.c utf8.h
 format_test_CPPFLAGS = $(AM_CPPFLAGS) -DRUN_FORMAT_TEST
 format_test_LDADD = $(ratpoison_LDADD)
