Move #ifdef HAVE_XRANDR in xrandr.c
- always build xrandr.c
- provide stubs in xrandr.c; only init_xrandr() anc xrandr_fill_screen()
  are safe to call if XRandR support is not built in

Code that wants to use XRandR outside xrandr.c should test rp_have_xrandr.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -74,11 +74,9 @@ ratpoison_SOURCES	= actions.c		\
 			util.c			\
 			util.h			\
 			window.c		\
-			window.h
-
-if HAVE_XRANDR
-ratpoison_SOURCES += xrandr.c xrandr.h
-endif
+			window.h		\
+			xrandr.c 		\
+			xrandr.h
 
 TESTS =			test-sbuf-utf8-nconcat
 check_PROGRAMS =	test-sbuf-utf8-nconcat
