--- a/configure.ac
+++ b/configure.ac
@@ -184,17 +184,13 @@ CPPFLAGS="$mysavedCPPFLAGS"
 
 AC_CHECK_LIB(Xrandr, XRRGetScreenResources, [libxrandr=yes], [libxrandr=no], [$X_LIBS $X_EXTRA_LIBS])
 
-compile_xrandr=no
 AS_CASE(["$with_xrandr:$xrandr_h:$libxrandr"],
   [yes:no:*], [AC_MSG_ERROR([*** Can't enable Xrandr support, header Xrandr.h not found.])],
   [yes:*:no], [AC_MSG_ERROR([*** Can't enable Xrandr support, libXrandr not found.])],
   [check:no:*], [AC_MSG_ERROR([*** Header Xrandr.h not found, use ./configure --without-xrandr to build without multiple screens support.])],
   [check:*:no], [AC_MSG_ERROR([*** libXrandr not found, use ./configure --without-xrandr to build without multiple screens support.])],
   [yes:yes:yes|check:yes:yes], [X_LIBS="-lXrandr $X_LIBS"
-  			        AC_DEFINE(HAVE_XRANDR, 1, [Define to 1 if you want Xrandr support.])
-				compile_xrandr=yes])
-
-AM_CONDITIONAL(HAVE_XRANDR, [test "$compile_xrandr" = yes])
+  			        AC_DEFINE(HAVE_XRANDR, 1, [Define to 1 if you want Xrandr support.])])
 
 AC_SUBST(X_LIBS)
 AC_SUBST(X_EXTRA_LIBS)
