mv src/* .; rm autoconf

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,2 @@
-*~
-/build-aux/
-!/m4/codeset.m4
-/m4/
-configure
-Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache
-config.status
-config.log
-ratpoison-*.tar.gz
-ratpoison-*.tar.gz.sig
-ratpoison-*.tar.xz
-ratpoison-*.tar.xz.sig
-TAGS
-/doc/version.texi
-/doc/stamp-vti
+*.o
+ratpoison
