--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: install dependencies
-      run: sudo apt-get install -y libx11-dev libxft-dev libxrandr-dev libxtst-dev
+      run: sudo apt-get install -y libx11-dev libxft-dev libxrandr-dev libxtst-dev libxres-dev
     - name: install clang-tools for make regress
       run: sudo apt-get install -y clang-tools
     - name: make
